# intel-bulkcoach-drakonoslav

./: .replit  EXPO_INTEL_INTEGRATION_SPEC.md  prod_lift_sets_backup_2026-02-01_to_2026-03-01.json  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
app/: batch1_seed.py  batch2a_seed.py  batch2b_seed.py  batch2c_seed.py  biomechanics_contract.py  biomechanics_seed.py  confidence.py  csv_log.py  database.py  equipment_filter.py  exercise_geometry.py  game_state.py  hierarchy.py  main.py  meal_plan.py  models.py  pec_zone_overlay.py  pec_zone_profiles.py  pec_zones.py  schemas.py  seed.py  strength_scoring.py  vitals_engine.py  vitals_models.py  vitals_rolling.py  vitals_scoring.py
attached_assets/: Composite_Muscle_Profile_Index_1772331293343.csv  Exercise_Muscle_Matrix_v2_1772329150478.csv  Exercise_Muscle_Matrix_v2_2_1772898930398.csv  PATCH_NOTES_1772898930398.txt  Pasted-Almost-I-would-not-greenlight-it-quite-yet-It-is-much-b_1772911700312.txt  Pasted-Below-are-pressure-test-questions-you-can-give-Intel-Th_1773352301628.txt  Pasted-Below-is-Intel-s-gear-text-rewritten-in-the-same-style-_1773351000275.txt  Pasted-Below-is-a-clean-v2-upgrade-path-you-can-give-Replit-In_1772907931423.txt  Pasted-Below-is-a-developer-ready-BulkCoach-build-packet-v1-fo_1773267566947.txt  Pasted-Below-is-a-full-BulkCoach-v1-system-spec-for-the-three-_1773267082593.txt  Pasted-Below-is-the-BulkCoach-Oscillator-Remediation-Implement_1773339702412.txt  Pasted-Below-is-the-non-negotiable-remediation-brief-for-Intel_1773339547259.txt  Role_Weighted_Matrix_v2_1772329858110.csv  (+35 more)
(+27 files in other folders)
