[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.134.0",
    "gunicorn>=25.1.0",
    "isoweek>=1.3.3",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.41.0",
]
